cambio tipo dato

--- a/listaProductos.html
+++ b/listaProductos.html
@@ -24,9 +24,9 @@
         <button type="submit" class="btn btn-success">Volver Inicio</button>
     </form>
 
-    <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Buscar por SKU" title="Type in a name">
+    <input type="number" id="myInput" onkeyup="myFunction()" placeholder="Buscar por SKU" title="Type in a name">
     <input type="text" id="myInput2" onkeyup="myFunction2()" placeholder="Buscar por Nombre" title="Type in a name">
-    <input type="text" id="myInput3" onkeyup="myFunction3()" placeholder="Buscar por Fecha" title="Type in a name">
+    <input type="date" id="myInput3" onkeyup="myFunction3()" placeholder="Buscar por Fecha" title="Type in a name">
 
     <select name="seleccionBodega" id="slctBo" class="selector">
         <option value="1">Seleccione una bodega</option>
@@ -40,7 +40,7 @@
         <tr>
             <td>SKU</td>
             <td>
-                <input type="text" name="SKU" id="txtSku" value="1" />
+                <input type="number" name="SKU" id="txtSku" value="1" />
             </td>
         </tr>
         <tr>
