--- a/loginBodeguero.html
+++ b/loginBodeguero.html
@@ -22,8 +22,8 @@
     <div class="loginUsuario" id="login">
         <br>
         <h1>Login </h1>
-        
-        <form  method="POST" action="./listaProductos.html" id="mi-login" n>
+
+        <form action="./listaProductos.html" id="mi-login" >
             <label for="usuario">Usuario:</label><br>
             <input type="text" id="username" name="usuario"  placeholder="Ingrese usuario" ><br>
             <br>
