--- a/listaProductos.html
+++ b/listaProductos.html
@@ -23,7 +23,9 @@
     <form action="./index.html" class="btnInicio">
         <button type="submit" class="btn btn-success">Volver Inicio</button>
     </form>
-
+    
+      
+    <div class="responsive">
     <input type="number" id="myInput" onkeyup="myFunction()" placeholder="Buscar por SKU" title="Type in a name">
     <input type="text" id="myInput2" onkeyup="myFunction2()" placeholder="Buscar por Nombre" title="Type in a name">
     <input type="date" id="myInput3" onkeyup="myFunction3()" placeholder="Buscar por Fecha" title="Type in a name">
@@ -85,6 +87,7 @@
             </td>
         </tr>
     </table>
+</div>
     <table id="tblCrud" class="table">
         <thead>
             <tr>
