--- a/registro.html
+++ b/registro.html
@@ -47,11 +47,19 @@
             <input type="password" id="contraseña_registro" required  placeholder="Nueva Clave" class="input-100"  minlength="6">
             <div class="col-12 col-md-4">
                 <br><br>
-                <div class="button-container">
+
+                <div class="d-grid gap-2 d-md-block">
                     <button type="submit" class="btn btn-success">Limpiar</button>
                     
                     <button type="submit" class="btn btn-success">Registrar </button>
                 </div>
+                </form>
+                <div class="alert alert-success" role="alert">
+                    <h4 class="alert-heading">¡¡Recuerda!!</h4>
+                    <p>Debes llenar todos los campos con los datos requeridos para poder registrarte.</p>
+                    <hr>
+                    
+                  </div>
             </div>
             <br><br>
     </div>
