--- a/registro.html
+++ b/registro.html
@@ -29,26 +29,26 @@
         <br><title>REGISTRARSE</title>
         <!--FORMULARIO-->
         <form action="" class="formulario__register ">
-            <h2>Registrarse</h2>
+            <h2>Registrarse</h2><br>
           
             <input type="text" 
                    id="nombre"
                    min="20"
-                   placeholder="Ingrese nombre completo" required>
-            <input type="email" 
+                   placeholder="Ingrese nombre completo" required> <br><br>
+            <input type="email"  
                    id="correo"
-                   placeholder="Ingrese su email" required>
+                   placeholder="Ingrese su email" required> <br><br>
             <input type="text"
                    id="txt_rut"
                    placeholder="Ingrese su rut. Ej: 12345678-9" 
-                   required oninput="rutEsValido(this)">
+                   required oninput="rutEsValido(this)"> <br> <br>
             <input type="date"
                    id="start"
-                   placeholder="Fecha de nacimiento">
-            <input type="text"
+                   placeholder="Fecha de nacimiento"> <br> <br>
+            <input type="number"
                    id="telefono"
-                   placeholder="Número de teléfono"
-                   class="input-100" required>
+                   placeholder="Número de teléfono" 
+                   class="input-100" required> <br> <br>
 
                 
                 <div class="d-grid gap-2 d-md-block">
@@ -56,7 +56,7 @@
                     <button type="submit" class="btn btn-success ">Registrar usuario</button>
                 </div>
                 </form>
-                <div class="alert alert-success d-md-block" role="alert">
+                <br><div class="alert alert-success d-md-block" role="alert">
                     <h4 class="alert-heading">¡¡Recuerda!!</h4>
                     <p>Debes llenar todos los campos con los datos requeridos para poder registrarte.</p>
                     <hr>
@@ -72,7 +72,7 @@
                 $("#commentForm").validate();
                 </script>
     </div>
-<script src="../js/registro.js"></script>
+<script src="./js/registro.js"></script>
 
 </body>
 
