--- a/listaProductos.html
+++ b/listaProductos.html
@@ -97,13 +97,40 @@
     <table id="tblCrud" class="table">
         <thead>
             <tr>
-                <th>SKU</th>
+                <th >SKU </th> 
                 <th>Nombre</th>
                 <th>Fecha</th>
                 <th>Cantidad</th>
                 <th>Categoria</th>
                 <th>Editar</th>
                 <th>Eliminar</th>
+            </tr>
+            <tr>
+                <td>587415486</td>
+                <td>Adaptador HDMI</td>
+                <td>23-12-2020</td>
+                <td>10</td>
+                <td>Electronico</td>
+                <td><button type="button">Editar</button></td>
+                <td><button type="button">Eliminar</button></td>
+            </tr>
+            <tr>
+                <td>879874568</td>
+                <td>Limpiador Pantalla</td>
+                <td>18-10-2020</td>
+                <td>5</td>
+                <td>Electronico</td>
+                <td><button type="button">Editar</button></td>
+                <td><button type="button">Eliminar</button></td>
+            </tr>
+            <tr>
+                <td>769428745</td>
+                <td>Lamparas 3 focos</td>
+                <td>02-11-2020</td>
+                <td>8</td>
+                <td>Hogar</td>
+                <td><button type="button">Editar</button></td>
+                <td><button type="button">Eliminar</button></td>
             </tr>
         </thead>
         <tbody></tbody>
