--- a/registro.html
+++ b/registro.html
@@ -32,24 +32,24 @@
         <form action="" class="formulario__register ">
             <h2>Registrarse</h2>
 
-            <input type="text" id="nombre" min="20" placeholder="Ingrese nombre completo" required>
-            <input type="email" id="correo" placeholder="Ingrese su email" required>
-            <input type="text" id="txt_rut" placeholder="Ingrese su rut. Ej: 12345678-9" required oninput="rutEsValido(this)">
-            <input type="date" id="start" placeholder="Fecha de nacimiento">
-            <input type="text" id="telefono" placeholder="Número de teléfono" class="input-100" required>
+            <input type="text" id="nombre" min="20" placeholder="Ingrese nombre completo" required><br><br>
+            <input type="email" id="correo" placeholder="Ingrese su email" required><br><br>
+            <input type="text" id="txt_rut" placeholder="Ingrese su rut. Ej: 12345678-9" required oninput="rutEsValido(this)"><br><br>
+            <input type="date" id="start" placeholder="Fecha de nacimiento"><br><br>
+            <input type="text" id="telefono" placeholder="Número de teléfono" class="input-100" required><br><br>
 
 
             <div class="d-grid gap-2 d-md-block">
                 <button type="submit" class="btn btn-success ">Guardar</button>
                 <button type="submit" class="btn btn-success ">Registrar usuario</button>
-            </div>
+            </div><br><br>
         </form>
         <div class="alert alert-success d-md-block" role="alert">
             <h4 class="alert-heading">¡¡Recuerda!!</h4>
             <p>Debes llenar todos los campos con los datos requeridos para poder registrarte.</p>
             <hr>
 
-        </div>
+        </div><br><br>
 
     </div>
     </form>
