--- a/registro.html
+++ b/registro.html
@@ -30,7 +30,7 @@
         <title>REGISTRARSE</title>
         <!--FORMULARIO-->
         <form action="" class="formulario__register ">
-            <h2>Registrarse</h2>
+            <h2>Registrarse</h2><br>
 
             <input type="text" id="nombre" min="20" placeholder="Ingrese nombre completo" required><br><br>
             <input type="email" id="correo" placeholder="Ingrese su email" required><br><br>
