--- a/registro.html
+++ b/registro.html
@@ -40,7 +40,7 @@
 
 
             <div class="d-grid gap-2 d-md-block">
-                <button type="submit" class="btn btn-success ">Guardar</button>
+                <button type="submit" class="btn btn-success ">Limpiar campos</button>
                 <button type="submit" class="btn btn-success ">Registrar usuario</button>
             </div><br><br>
         </form>
