--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </p>
     </div>
 
-    <div class="ingresoBienvenida">
+    <div class="ingresoBienvenida responsive">
         <br><button type="button" class="btn btn-success"><a href="./loginBodeguero.html" >Iniciar sesión</a></button>
         <br><br>
         <p>
