--- a/registro.html
+++ b/registro.html
@@ -35,7 +35,7 @@
             <input type="text" id="nombre" min="20" placeholder="Ingrese nombre completo" required>
             <input type="email" id="correo" placeholder="Ingrese su email" required>
             <input type="text" id="txt_rut" placeholder="Ingrese su rut. Ej: 12345678-9" required oninput="rutEsValido(this)">
-            <input type="date" id="start" placeholder="Fecha de nacimiento">
+            <input type="date" id="start" placeholder="Fecha de nacimiento" required>
             <input type="text" id="telefono" placeholder="Número de teléfono" class="input-100" required>
 
 
